# portfire

./: .gitmodules  README.md
blinkfw/: Cargo.toml  memory.x
blinkfw/src/: main.rs
case/: .gitignore  side_ethernet.SLDPRT  top_plate.SLDPRT
case/castellated_top/: base_plate.SLDPRT  case_assembled.SLDASM  hex_pillar.SLDPRT  pcb.SLDPRT  side_1-10_and_21-30.SLDPRT  side_11-20.SLDPRT
case/hinged_lid/: case_assembled.SLDASM  hinged_lid.SLDPRT  side_1-10_and_21-30.SLDPRT  side_11-20.SLDPRT  side_ethernet.SLDPRT  spacer.SLDPRT  top_plate.SLDPRT
case/hinged_lid/plots/: base_plate.DXF  hinged_lid.DXF  side_1-10_and_21-30.DXF  side_11-20.DXF  side_ethernet.DXF  top_plate.DXF
firmware/: Makefile  README.md  board.h  board.yaml  chconf.h  firing.c  firing.h  halconf.h  lwipopts.h  main.c  mcuconf.h  net.c  net.h  net_listen.py  net_test.py
hardware/: Minipow.kicad_mod  PTSA0,52-2,5-z.kicad_mod  PTSA0,52-2,5-z.wrl  RJHSE5380.kicad_mod  SLF12575T-220M4R0-PF.kicad_mod  Test_point_mini.kicad_mod  bom.txt  ethernet.sch  firing.sch  fp-lib-table  jump.kicad_mod  jump_NC.kicad_mod  portfire-cache.lib  portfire.bom  portfire.kicad_pcb  portfire.net  portfire.pro  portfire.sch  portfire.xml  portfire_bom.ods
hardware/gerbers/: portfire-B.Cu.gbl  portfire-B.Mask.gbs  portfire-B.SilkS.gbo  portfire-Edge.Cuts.gm1  portfire-Edge.Cuts.gml  portfire-F.Cu.gtl  portfire-F.Mask.gts  portfire-F.Paste.gtp  portfire-F.SilkS.gto  portfire.drl
invites/: .gitignore  send_email.py  template.txt
